# tkmcollector

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG  CMakeLists.txt  README.md
cmake/: Packing.cmake
config/: CMakeLists.txt  tkm-collector.conf.in  tkm-collector.service.in  tkmcollector.conf.in  tkmcollector.in  tkmcollector.service.in
control/: Application.cpp  Application.h  CMakeLists.txt  Command.cpp  Command.h  Connection.cpp  Connection.h  Dispatcher.cpp  Dispatcher.h  Main.cpp
shared/: Defaults.h.in  EnvelopeReader.cpp  EnvelopeReader.h  EnvelopeWriter.cpp  EnvelopeWriter.h  Helpers.cpp  Helpers.h  IAsyncEnvelope.h  Options.cpp  Options.h  Query.cpp  Query.h
source/: Application.cpp  Application.h  CMakeLists.txt  Connection.cpp  Connection.h  ControlClient.cpp  ControlClient.h  DataSource.h  DeviceManager.cpp  DeviceManager.h  Dispatcher.cpp  Dispatcher.h  IClient.h  IDatabase.h  IDevice.h  Main.cpp  MonitorDevice.cpp  MonitorDevice.h  PQDatabase.cpp  PQDatabase.h  Query.cpp  Query.h  SQLiteDatabase.cpp  SQLiteDatabase.h  UDSServer.cpp  UDSServer.h
tests/: CMakeLists.txt  gtest_application.cpp
tests/assets/: cds-server-sqlite.conf  cds-server.conf
